# agent-harness

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  README.md  application-letter.md  claude-progress.txt  docker-compose.forge.yml  docker-compose.yml  pyproject.toml  requirements.json
.claude/: mcp_servers.json  settings.json  settings.local.json
config/: auto-queue-config.example.json
dashboard/: Dockerfile  app.py  nginx.conf.example  test_dashboard.py
deploy/: agent-forge.service
docs/: DUAL-BOOT-GUIDE.md
examples/: autoresearch-RUNGUIDE.md  autoresearch-cli-FEATURES.md  autoresearch-cli-PROGRAM.md  batch-jobs.sh  bmark-cli-001.json  bmark-cli-002.json  costctl-001.json  costctl-002.json  costctl-002c.json  costctl-003.json  costctl-004.json  costctl-api-001.json  expense-001.json  expense-002.json  habit-001.json  sample-5loop-crud.json  sample-autoresearch-cli.json  sample-autoresearch-fastapi.json  sample-job-gpu.json  sample-job.json  sample-product-job.json  soak-multiloop-001.json  soak-observation-template.md  standup-001.json  standup-002.json  standup-003.json  standup-004.json  ttrack-001.json
forge/: __init__.py  __main__.py  auditor.py  cli.py  evaluator.py  generator.py  ledger.py  machine.py  models.py  scorer.py  workspace.py
hooks/: block-dangerous.sh  post-edit-lint.sh  post-failure-log.sh  pre-commit-gate.sh
logs/: ab-observation-v1v2-001.md  ab-observation-v2.1-001.md  costctl-001-observation.md  costctl-002-observation.md  costctl-002c-observation.md  costctl-003-observation.md  (+6 more)
(+89 files in other folders)
